--- a/src/main/webapp/shop/css/shopHome.css
+++ b/src/main/webapp/shop/css/shopHome.css
@@ -136,8 +136,8 @@ header h1{
 
 }
 #right-content{
-    background-color: #0ccaff;
     width: 75%;
+    height: 100%;
     float: right;
 }
 #left-content h2{
